--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,10 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-
+    <listener>
+        <listener-class>solarprox.SolarProx</listener-class>
+    </listener>
     <servlet>
         <servlet-name>Login</servlet-name>
-        <servlet-class>solarprox.web.Login</servlet-class>
+        <servlet-class>Login</servlet-class>
     </servlet>
 
     <servlet-mapping>
